移除examples