@@ -1,31 +1,11 @@
-/**
- *
- * (c) Copyright Ascensio System SIA 2023
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */
-
 package com.flash.onlyoffice.domain.storage;
 
+import com.alibaba.fastjson2.JSONObject;
 import com.flash.onlyoffice.domain.util.file.FileUtility;
 import com.flash.onlyoffice.properties.FileStorageProperties;
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.Getter;
 import lombok.SneakyThrows;
-import org.json.simple.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Primary;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Component;
@@ -52,28 +32,23 @@ import java.util.stream.Stream;
 
 import static com.flash.onlyoffice.domain.util.Constants.KILOBYTE_SIZE;
 
-// todo: Refactoring
+/**
+ * @author zsp
+ * @date 2023/9/7 15:02
+ */
 @Component
-@Primary
-public class LocalFileStorage implements FileStorageMutator, FileStoragePathBuilder {
+public class LocalFileStorage implements FileStoragePathBuilder, FileStorageMutator {
+
+    @Autowired
+    private FileStorageProperties fileStorageProperties;
+    @Autowired
+    private FileUtility fileUtility;
 
     @Getter
     private String storageAddress;
 
-    @Autowired
-    private FileStorageProperties fileStorageProperties;
-
-    @Autowired
-    private FileUtility fileUtility;
-
-    @Autowired
-    private HttpServletRequest request;
-
-    /*
-        This Storage configuration method should be called whenever a new storage folder is required
-     */
     @Override
-    public void configure(final String address) {
+    public void configure(String address) {
         this.storageAddress = address;
         if (this.storageAddress == null) {
             try {
@@ -86,179 +61,19 @@ public class LocalFileStorage implements FileStorageMutator, FileStoragePathBuil
         createDirectory(Paths.get(getStorageLocation()));
     }
 
-    // get the storage directory
     @Override
-    public String getStorageLocation() {
-        String serverPath = System.getProperty("user.dir");  // get the path to the server
-        String directory;  // create the storage directory
-        if (Paths.get(this.storageAddress).isAbsolute()) {
-            directory = this.storageAddress + File.separator;
-        } else {
-            directory = serverPath
-                    + File.separator + fileStorageProperties.getFolder()
-                    + File.separator + this.storageAddress
-                    + File.separator;
-        }
-        if (!Files.exists(Paths.get(directory))) {
-            createDirectory(Paths.get(directory));
-        }
+    public String getForcesavePath(String fileLocation, Boolean create) {
 
-        return directory;
-    }
+        String fileName = fileUtility.getFileName(fileLocation);
 
-    // get the directory of the specified file
-    @Override
-    public String getFileLocation(final String fileName) {
-        if (fileName.contains(File.separator)) {
-            return getStorageLocation() + fileName;
-        }
-        return getStorageLocation() + fileUtility.getFileName(fileName);
-    }
+        String directory = fileLocation + fileStorageProperties.getHistoryPostfix() + "/";
 
-    // create a new directory if it does not exist
-    @Override
-    public void createDirectory(final Path path) {
-        if (Files.exists(path)) {
-            return;
-        }
-        try {
-            Files.createDirectories(path);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    // create a new file if it does not exist
-    @Override
-    public boolean createFile(final Path path, final InputStream stream) {
-        if (Files.exists(path)) {
-            return true;
-        }
-        try {
-            File file = Files.createFile(path).toFile();  // create a new file in the specified path
-            try (FileOutputStream out = new FileOutputStream(file)) {
-                int read;
-                final byte[] bytes = new byte[KILOBYTE_SIZE];
-                while ((read = stream.read(bytes)) != -1) {
-                    out.write(bytes, 0, read);  // write bytes to the output stream
-                }
-                out.flush();  // force write data to the output stream that can be cached in the current thread
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return false;
-    }
-
-    // delete a file
-    @Override
-    public boolean deleteFile(final String fileNameParam) {
-        String fileName = URLDecoder
-                .decode(fileNameParam, StandardCharsets.UTF_8);  // decode a x-www-form-urlencoded string
-        if (fileName.isBlank()) {
-            return false;
-        }
-
-        String filenameWithoutExt = fileUtility
-                .getFileNameWithoutExtension(fileName);  // get file name without extension
-
-        Path filePath = fileName.contains(File.separator)
-                ? Paths.get(fileName) : Paths.get(getFileLocation(fileName));  // get the path to the file
-        Path filePathWithoutExt = fileName.contains(File.separator)
-                ? Paths.get(filenameWithoutExt) : Paths
-                .get(getStorageLocation() + filenameWithoutExt);  // get the path to the file without extension
-
-        // delete the specified file; for directories, recursively delete any nested directories or files as well
-        boolean fileDeleted = FileSystemUtils.deleteRecursively(filePath.toFile());
-        /* delete the specified file without extension; for directories,
-         recursively delete any nested directories or files as well */
-        boolean fileWithoutExtDeleted = FileSystemUtils.deleteRecursively(filePathWithoutExt.toFile());
-
-        return fileDeleted && fileWithoutExtDeleted;
-    }
-
-    // delete file history
-    @Override
-    public boolean deleteFileHistory(final String fileNameParam) {
-        String fileName = URLDecoder
-                .decode(fileNameParam, StandardCharsets.UTF_8);  // decode a x-www-form-urlencoded string
-        if (fileName.isBlank()) {
-            return false;
-        }
-
-        Path fileHistoryPath = Paths
-                .get(getStorageLocation() + getHistoryDir(fileName));  // get the path to the history file
-        Path fileHistoryPathWithoutExt = Paths.get(getStorageLocation() + getHistoryDir(fileUtility
-                .getFileNameWithoutExtension(fileName)));  // get the path to the history file without extension
-
-        /* delete the specified history file; for directories,
-         recursively delete any nested directories or files as well */
-        boolean historyDeleted = FileSystemUtils.deleteRecursively(fileHistoryPath.toFile());
-
-        /* delete the specified history file without extension; for directories,
-         recursively delete any nested directories or files as well */
-        boolean historyWithoutExtDeleted = FileSystemUtils.deleteRecursively(fileHistoryPathWithoutExt.toFile());
-
-        return historyDeleted || historyWithoutExtDeleted;
-    }
-
-    // update a file
-    @Override
-    public String updateFile(final String fileName, final byte[] bytes) {
-        Path path = fileUtility
-                .generateFilepath(getStorageLocation(), fileName);  // generate the path to the specified file
-        try {
-            Files.write(path, bytes);  // write new information in the bytes format to the file
-            return path.getFileName().toString();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return "";
-    }
-
-    // move a file to the specified destination
-    @Override
-    public boolean moveFile(final Path source, final Path destination) {
-        try {
-            Files.move(source, destination,
-                    new StandardCopyOption[]{StandardCopyOption.REPLACE_EXISTING});
-            return true;
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return false;
-    }
-
-    // write the payload to the file
-    @Override
-    public boolean writeToFile(final String pathName, final String payload) {
-        try (FileWriter fw = new FileWriter(pathName)) {
-            fw.write(payload);
-            return true;
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return false;
-    }
-
-    // get the path where all the forcely saved file versions are saved or create it
-    @Override
-    public String getForcesavePath(final String fileName, final Boolean create) {
-        String directory = getStorageLocation();
-
-        Path path = Paths.get(directory);  // get the storage directory
-        if (!Files.exists(path)) {
-            return "";
-        }
-
-        directory = getFileLocation(fileName) + fileStorageProperties.getHistoryPostfix() + File.separator;
-
-        path = Paths.get(directory);   // get the history file directory
+        Path path = Paths.get(directory);
         if (!create && !Files.exists(path)) {
             return "";
         }
 
-        createDirectory(path);  // create a new directory where all the forcely saved file versions will be saved
+        createDirectory(path);
 
         directory = directory + fileName;
         path = Paths.get(directory);
@@ -269,86 +84,15 @@ public class LocalFileStorage implements FileStorageMutator, FileStoragePathBuil
         return directory;
     }
 
-    // load file as a resource
     @Override
-    public Resource loadFileAsResource(final String fileName) {
-        String fileLocation = getForcesavePath(fileName,
-                false);  // get the path where all the forcely saved file versions are saved
-        if (fileLocation.isBlank()) {  // if file location is empty
-            fileLocation = getFileLocation(fileName);  // get it by the file name
-        }
-        try {
-            Path filePath = Paths.get(fileLocation);  // get the path to the file location
-            Resource resource = new UrlResource(filePath.toUri());  // convert the file path to URL
-            if (resource.exists()) {
-                return resource;
-            }
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
-
-    @Override
-    public Resource loadFileAsResourceHistory(final String fileName, final String version, final String file) {
-
-        String fileLocation = getStorageLocation() + fileName + "-hist" + File.separator + version
-                + File.separator + file;  // get it by the file name
-
-        try {
-            Path filePath = Paths.get(fileLocation);  // get the path to the file location
-            Resource resource = new UrlResource(filePath.toUri());  // convert the file path to URL
-            if (resource.exists()) {
-                return resource;
-            }
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
-
-    // get a collection of all the stored files
-    @Override
-    public File[] getStoredFiles() {
-        File file = new File(getStorageLocation());
-        return file.listFiles(File::isFile);
-    }
-
-    @Override
-    @SneakyThrows
-    public void createMeta(final String fileName,
-                           final String uid,
-                           final String uname) {  // create the file meta information
-        String histDir = getHistoryDir(getFileLocation(fileName));  // get the history directory
-
-        Path path = Paths.get(histDir);  // get the path to the history directory
-        createDirectory(path);  // create the history directory
-
-        // create the json object with the file metadata
-        JSONObject json = new JSONObject();
-        json.put("created", new SimpleDateFormat("yyyy-MM-dd HH:mm:ss")
-                .format(new Date()));  // put the file creation date to the json object
-        json.put("id", uid);  // put the user ID to the json object
-        json.put("name", uname);  // put the user name to the json object
-
-        File meta = new File(histDir + File.separator
-                + "createdInfo.json");  // create the createdInfo.json file with the file meta information
-        try (FileWriter writer = new FileWriter(meta)) {
-            json.writeJSONString(writer);
-        } catch (IOException ex) {
-            ex.printStackTrace();
-        }
-    }
-
-    // create or update a file
-    @Override
-    public boolean createOrUpdateFile(final Path path, final InputStream stream) {
-        if (!Files.exists(path)) { // if the specified file does not exist
-            return createFile(path, stream);  // create it in the specified directory
+    public boolean createOrUpdateFile(final Path filePath, final InputStream stream) {
+        // 如果文件不存在则新增，存在则更新
+        if (!Files.exists(filePath)) {
+            return createFile(filePath, stream);
         } else {
             try {
-                Files.write(path, stream
-                        .readAllBytes());  // otherwise, write new information in the bytes format to the file
+                Files.write(filePath, stream
+                        .readAllBytes());
                 return true;
             } catch (IOException e) {
                 e.printStackTrace();
@@ -357,50 +101,222 @@ public class LocalFileStorage implements FileStorageMutator, FileStoragePathBuil
         return false;
     }
 
-    // get the server URL
     @Override
-    public String getServerUrl(final Boolean forDocumentServer) {
-        String site = fileStorageProperties.getSite();
-        if (forDocumentServer && !"".equals(site)) {
-            return site;
-        } else {
-            String s = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort()
-                       + request.getContextPath();
-            return s;
+    public boolean createFile(final Path filePath, final InputStream stream) {
+        if (Files.exists(filePath)) {
+            return true;
         }
+        try {
+            if (!Files.exists(filePath.getParent())) {
+                createDirectory(filePath.getParent());
+            }
+            File file = Files.createFile(filePath).toFile();
+            try (FileOutputStream out = new FileOutputStream(file)) {
+                int read;
+                final byte[] bytes = new byte[KILOBYTE_SIZE];
+                while ((read = stream.read(bytes)) != -1) {
+                    out.write(bytes, 0, read);
+                }
+                out.flush();
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return false;
     }
 
-    // get the history directory
     @Override
-    public String getHistoryDir(final String path) {
-        return path + fileStorageProperties.getHistoryPostfix();
+    public String getHistoryDir(final String fileLocation) {
+        return fileLocation + fileStorageProperties.getHistoryPostfix();
     }
 
-    // get the file version
     @Override
     public int getFileVersion(final String historyPath, final Boolean ifIndexPage) {
         Path path;
-        if (ifIndexPage) {  // if the start page is opened
-            path = Paths.get(getStorageLocation()
-                    + getHistoryDir(historyPath));  // get the storage directory and add the history directory to it
+        if (ifIndexPage) {
+            // todo 起始页逻辑暂时不用
+            path = Paths.get(getStorageLocation() + getHistoryDir(historyPath));
         } else {
-            path = Paths.get(historyPath);  // otherwise, get the path to the history directory
+            path = Paths.get(historyPath);
             if (!Files.exists(path)) {
-                return 1;  // if the history directory does not exist, then the file version is 1
+                return 1;
             }
         }
 
         // run through all the files in the history directory
         try (Stream<Path> stream = Files.walk(path, 1)) {
             return stream
-                    .filter(Files::isDirectory)  // take only directories from the history folder
-                    .map(Path::getFileName)  // get file names
-                    .map(Path::toString)  // and convert them into strings
-                    .collect(Collectors.toSet()).size();  /* convert stream into set
+                    // take only directories from the history folder
+                    .filter(Files::isDirectory)
+                    // get file names
+                    .map(Path::getFileName)
+                    // and convert them into strings
+                    .map(Path::toString)
+                    /* convert stream into set
                      and get its size which specifies the file version */
+                    .collect(Collectors.toSet()).size();
         } catch (IOException e) {
             e.printStackTrace();
             return 0;
         }
     }
+
+    @Override
+    public String getFileLocation(final String fileDir) {
+        if (fileDir.contains("/")) {
+            return getStorageLocation() + fileDir;
+        }
+        return getStorageLocation() + fileUtility.getFileName(fileDir);
+    }
+
+    @Override
+    public boolean moveFile(final Path source, final Path destination) {
+        try {
+            Files.move(source, destination,
+                       new StandardCopyOption[]{StandardCopyOption.REPLACE_EXISTING});
+            return true;
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return false;
+    }
+
+    @Override
+    public boolean writeToFile(final String fileDir, final String payload) {
+        try (FileWriter fw = new FileWriter(fileDir)) {
+            fw.write(payload);
+            return true;
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return false;
+    }
+
+    @Override
+    public void createDirectory(Path path) {
+        if (Files.exists(path)) {
+            return;
+        }
+        try {
+            Files.createDirectories(path);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    @Override
+    public String getStorageLocation() {
+        String directory = this.storageAddress + "/";
+        if (!Files.exists(Paths.get(directory))) {
+            createDirectory(Paths.get(directory));
+        }
+
+        return directory;
+    }
+
+    @Override
+    public boolean deleteFile(final String fileDir) {
+        // decode a x-www-form-urlencoded string
+        String fileDirNew = URLDecoder
+                .decode(fileDir, StandardCharsets.UTF_8);
+        if (fileDirNew.isBlank()) {
+            return false;
+        }
+
+        String fileWithoutExt = fileDir.substring(0, fileDir.lastIndexOf('.'));
+        Path filePath = Paths.get(fileDir);
+        Path filePathWithoutExt = Paths.get(fileWithoutExt);
+
+        boolean fileDeleted = FileSystemUtils.deleteRecursively(filePath.toFile());
+        boolean fileWithoutExtDeleted = FileSystemUtils.deleteRecursively(filePathWithoutExt.toFile());
+
+        return fileDeleted && fileWithoutExtDeleted;
+    }
+
+    @Override
+    public boolean deleteFileHistory(final String fileDir) {
+
+        Path fileHistoryPath = Paths.get(getHistoryDir(fileDir));
+
+        return FileSystemUtils.deleteRecursively(fileHistoryPath.toFile());
+    }
+
+    @Override
+    public Resource loadFileAsResource(final String fileDir) {
+        // get the path where all the forcely saved file versions are saved
+        String fileLocation = getForcesavePath(fileDir, false);
+        // if file location is empty
+        if (fileLocation.isBlank()) {
+            // get it by the file name
+            fileLocation = fileDir;
+        }
+        try {
+            // get the path to the file location
+            Path filePath = Paths.get(fileLocation);
+            // convert the file path to URL
+            Resource resource = new UrlResource(filePath.toUri());
+            if (resource.exists()) {
+                return resource;
+            }
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    @Override
+    public Resource loadFileAsResourceHistory(final String fileDir, final String version, final String file) {
+
+        String fileLocation = fileDir + "-hist" + "/" + version + "/" + file;
+
+        try {
+            Path filePath = Paths.get(fileLocation);
+            Resource resource = new UrlResource(filePath.toUri());
+            if (resource.exists()) {
+                return resource;
+            }
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    /**
+     * 内部访问地址
+     *
+     * @param forDocumentServer
+     * @return
+     */
+    @Override
+    public String getServerUrl(final Boolean forDocumentServer) {
+        if (forDocumentServer) {
+            return fileStorageProperties.getInnerSite();
+        } else {
+            return fileStorageProperties.getOutSite();
+        }
+    }
+
+    @Override
+    @SneakyThrows
+    public void createMeta(final String fileDir, final String uid, final String uname) {
+        String histDir = getHistoryDir(fileDir);
+
+        Path path = Paths.get(histDir);
+        createDirectory(path);
+
+        // create the json object with the file metadata
+        JSONObject json = new JSONObject();
+        json.put("created", new SimpleDateFormat("yyyy-MM-dd HH:mm:ss")
+                .format(new Date()));
+        json.put("id", uid);
+        json.put("name", uname);
+
+        File meta = new File(histDir + "/" + "createdInfo.json");
+        try (FileWriter writer = new FileWriter(meta)) {
+            writer.write(json.toJSONString());
+        } catch (IOException ex) {
+            ex.printStackTrace();
+        }
+    }
+
 }
